SWWEB-860 disable fixed header on mobile devices

--- a/softWrench.sW4.Web/Content/styles/default/header.css
+++ b/softWrench.sW4.Web/Content/styles/default/header.css
@@ -2,7 +2,6 @@
     margin-left: auto !important;
     margin-right: auto !important;
     width: 100%;
-    position: fixed;
 }
 
     /*Responsive Menu*/
@@ -152,7 +151,7 @@
 }
 
 @media all and (min-width: 768px) {
-    .container header {
+    .container.desktop header {
         position: fixed;
     }
 
